--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-burger-menu": "^2.7.0",
     "react-dom": "^16.13.1",
     "react-responsive-carousel": "^3.2.9",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "styled-components": "^5.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
